feat<logout>: add log out button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
 <body>
     <button id="login">Login with NEAR</button>
     <button id="sign" disabled>Sign Message</button>
+    <button id="logout">Log out</button>
 
     <script type="module" src="./main.js"></script>
 </body>
